--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -36,11 +36,13 @@ task buildDocker(type: Docker, dependsOn: build) {      // this task will build 
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    compile("org.apache.solr:solr-core:5.5.4")
     compile ("org.apache.commons:commons-csv:1.1")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile project(':model')
