--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-test")
     compile("org.apache.solr:solr-core:5.5.4")
     compile ("org.apache.commons:commons-csv:1.1")
+    compile("io.springfox:springfox-swagger-ui:2.2.2")
+    compile("io.springfox:springfox-swagger2:2.2.2")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile project(':model')
     compile project(':search')
